# nash_solver

./: .gitignore  LICENSE  README.md  nash_solver_demo.ipynb  pyproject.toml
examples/: pursuit_evasion.py  soccer_game.py
nash_solver/: __init__.py  base_game.py  nash_utils.py  solver.py
tests/: test_linprog.py  test_nash.py
